--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
